src/objects/Payment_Gateway__c.object
<CustomObject>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_Encrypted__c</fullName>
        <label>Login Encrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>OAuth_Token__c</fullName>
        <label>OAuth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password_Encrypted__c</fullName>
        <label>Password Encrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Production_URL__c</fullName>
        <label>Production URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Test_Code_Response__c</fullName>
        <label>Test Code Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Login__c</fullName>
        <label>Test Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Password__c</fullName>
        <label>Test Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_URL__c</fullName>
        <label>Test URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tokenize_Account_Numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tokenize Account Numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Banquet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment Gateway</label>
    <nameField>
        <label>Payment Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>